# quant_edge

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  QuantEdge.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.py  ui_design.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_macro_series_pit.py  003_add_stock_minute_aggs.py  004_add_price_reconciliation_events.py  005_add_compression_and_backfill_state.py  006_add_minute_watermark_cols.py  007_add_stock_trades_sampled.py  (+3 more)
dags/: _airflow_compat.py  dag_daily_data.py  dag_weekly_rebalance.py  dag_weekly_signal.py
docs/: QuantEdge_optimized_plan_FMP_Massive_2026-04-17.md  pit_daily_contract.md  plan.txt  project_brief_for_review.md
frontend/: auto-imports.d.ts  config.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: _audit_common.py  _data_ops.py  _week6_family_utils.py  _week7_ic_utils.py  audit_benchmark.py  audit_feature_parity.py  audit_price_truth.py  audit_universe.py  backfill_earnings_and_news.py  backfill_finra_short_sale.py  backfill_fmp_analyst.py  backfill_linear_attribution.py  backfill_paper_portfolio_audit.py  backfill_price_gap.py  backfill_shorting_features.py  backfill_sp500_history.py  backfill_stocks_metadata.py  backfill_universe_membership.py  build_feature_matrix.py  build_intraday_features_full.py  build_regime_table.py  build_trade_microstructure_features.py  build_trade_microstructure_flat_features.py  build_trade_microstructure_minute_proxy_features.py  build_trades_sample_universe.py  calibrate_trade_vs_minute_features.py  check_date_range.py  check_db_status.py  check_hypertables.py  check_registry.py  check_tickers.py  cleanup_pre_ipo_prices.py  compute_realized_returns.py  daily_update.py  diagnose_minute_daily_discrepancy.py  diagnose_model_consistency.py  diagnose_p1_root_cause.py  diagnose_p2_root_cause.py  diagnose_p3_root_cause.py  diagnose_w6_w8.py  (+76 more)
src/: __init__.py  celery_app.py  config.py  mlflow_config.py
tests/: conftest.py  test_smoke.py
(+448 files in other folders)
