[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantedge"
version = "0.1.0"
description = "Research-driven institutional-grade US equities quant platform."
readme = "QuantEdge.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Phase 1 Week 1: data layer
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "asyncpg",
    # Phase 1 Week 1: data processing
    "pandas>=2.2",
    "numpy>=1.26",
    "exchange-calendars>=4.0",
    # Phase 1 Week 1: configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv",
    # Phase 1 Week 1: MLOps and logging
    "mlflow>=2.11",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    # Phase 1 Week 1: testing and code quality
    "pytest",
    "ruff",
    "mypy",
]
phase1-week2 = [
    # Planned for Phase 1 Week 2
    "polygon-api-client>=1.13",
    "fredapi>=0.5",
    "requests",
]
phase1-week3 = [
    # Planned for Phase 1 Week 3
    "pyarrow>=15.0",
    "pandas-ta>=0.3; python_version >= '3.12'",
    # Phase 1 Week 3: Polygon flat files via S3
    "boto3>=1.34",
]
phase1-week5 = [
    # Planned for Phase 1 Week 5
    "scikit-learn>=1.4",
]
phase1-week6 = [
    # Planned for Phase 1 Week 6
    "xgboost>=2.0",
    "lightgbm>=4.3",
]
phase1-week7 = [
    # Planned for Phase 1 Week 7
    "torch>=2.2",
]
phase1-week9 = [
    # Planned for Phase 1 Week 9
    "PyPortfolioOpt>=1.5",
    "cvxpy>=1.4",
]
phase1-week10 = [
    # Planned for Phase 1 Week 10
    "scipy>=1.12",
    "arch>=6.3",
    "statsmodels",
]
phase3 = [
    # Planned for Phase 3
    "fastapi>=0.115",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "redis>=5.0",
    "celery>=5.3",
    "shap>=0.45",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
